# filesystem

./: .pre-commit-config.yaml  AUTHORS  NOTICE  conftest.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: python-package.yml  python-tests.yml
filesystem/: __init__.py  cached_filesystem.py  cloning_filesystem.py  close_protected_stream.py  disk_filesystem.py  filesystem_interface.py  ftp_filesystem.py  inmem_filesystem.py  s3_filesystem.py  sftp_filesystem.py  util.py  write_once_filesystem.py  write_protected_filesystem.py
tests/: filesystem_test.py  ftp_server.py  sftp_server.py  subprocess_service_base.py  util.py
